Day 1  - Ivor - code style improvements