@@ -1,8 +1,9 @@
 package nl.openweb.adventofcode2018.ivor.day1;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.stream.IntStream;
 
 /**
@@ -18,21 +19,19 @@ public class Day1Question1 {
     public static void main(String... args) {
 
         try {
-            var result = new Day1Question1().getSum();
+            var result = new Day1Question1().getLines().sum();
             System.out.println("Day1 Q1 result=" + result);
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             e.printStackTrace();
         }
 
     }
 
 
-    public IntStream getLines() throws IOException {
-        var inputFileName = "C:\\projects\\openweb\\sourcecodes\\adventofcode2018\\Ivor\\src\\main\\resources\\input_day1.txt";
-        return Files.lines(Path.of(inputFileName)).mapToInt(Integer::parseInt);
+    public IntStream getLines() throws IOException, URISyntaxException {
+        var inputFileName = "input_day1.txt";
+        return Files.lines( Paths.get(getClass().getClassLoader()
+                .getResource(inputFileName).toURI())).mapToInt(Integer::parseInt);
     }
 
-    public Integer getSum() throws IOException {
-        return getLines().sum();
-    }
 }
